--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ header {
 }
 
 header .title {
-  color: #ffffff;
+  color: #a0a0a0;
   font-size: 144px;
   font-weight: 800;
   display: inline;
@@ -67,31 +67,37 @@ header .searchbar .subBut {
   justify-content: space-between;
 }
 .dashboard .card {
-  background: #ffffff;
   margin-top: 50px;
   width: 197px;
   height: 90px;
   border-radius: 5px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: space-between;
   box-sizing: border-box;
 }
 .dashboard .TitleCard {
   color: #000000;
   font-weight: 800;
   text-align: center;
-  padding: 15px 0;
-  margin-bottom: 10px;
-  height: 50px;
+  padding-top: 15px;
+  height: 43px;
   width: 197px;
   border-top-left-radius: 4.2px;
   border-top-right-radius: 4.2px;
-  background-color: #e32632;
+  background: #453c4b;
+  box-sizing: border-box;
+}
+.dashboard .CardValue {
+  height: 43px;
+  width: 197px;
+  margin-top: 4px;
+  background: #453c4b;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 .dashboard .card > h3 {
   margin-bottom: 30px;
+  font-weight: 800;
+  color: #ffffff;
 }
 
 @media screen and (max-width: 1080px) {
