--- a/style.css
+++ b/style.css
@@ -67,32 +67,36 @@ header .searchbar .subBut {
   justify-content: space-between;
 }
 .dashboard .card {
-  margin-top: 50px;
-  width: 197px;
+  margin-top: 20px;
+  width: 185px;
   height: 90px;
   border-radius: 5px;
   box-sizing: border-box;
 }
-.dashboard .TitleCard {
-  color: #000000;
-  font-weight: 800;
-  text-align: center;
-  padding-top: 15px;
-  height: 43px;
-  width: 197px;
-  border-top-left-radius: 4.2px;
-  border-top-right-radius: 4.2px;
-  background: #453c4b;
-  box-sizing: border-box;
-}
+
 .dashboard .CardValue {
-  height: 43px;
-  width: 197px;
+  height: 73px;
+  width: 185px;
   margin-top: 4px;
-  background: #453c4b;
+  background: #e61919;
   display: flex;
   align-items: center;
   justify-content: center;
+  color: white;
+  font-weight: 800;
+}
+.dashboard .TitleCard {
+  color: #1d1919;
+  font-size: 14px;
+  font-weight: 400px;
+  text-align: center;
+  padding-top: 15px;
+  height: 43px;
+  width: 185px;
+  border-bottom-left-radius: 17px;
+  border-bottom-right-radius: 17px;
+  background: #ffffff;
+  box-sizing: border-box;
 }
 .dashboard .card > h3 {
   margin-bottom: 30px;
